new class created for removing vowels from a string

--- a/CodeWars.Tests/CodeWars.Tests.csproj
+++ b/CodeWars.Tests/CodeWars.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisemvowelTrolls.cs" />
     <Compile Include="MultiplesOf3Or5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
